# apk-compat-helper

./: .gitignore  README.md  README_EN.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: development-design.md  ui-design-spec.md
scripts/: bundle-macos-tools.zsh  bundle-windows-tools.ps1
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: compatibility-catalog.json
src-tauri/resources/tooling/macos/: zipalign
src-tauri/resources/tooling/macos/runtime/: release
src-tauri/resources/tooling/macos/runtime/conf/security/: java.security
src-tauri/resources/tooling/macos/runtime/lib/: classlist  jspawnhelper  libawt.dylib  libawt_lwawt.dylib  libfontmanager.dylib  libfreetype.dylib  libjava.dylib  libjavajpeg.dylib  libjawt.dylib  libjimage.dylib  libjli.dylib  libjsig.dylib  libjsound.dylib  liblcms.dylib  libmlib_image.dylib  libnet.dylib  libnio.dylib  libosx.dylib  libosxapp.dylib  libosxsecurity.dylib  libosxui.dylib  libprefs.dylib  libsplashscreen.dylib  libverify.dylib  libzip.dylib
src-tauri/resources/tooling/macos/runtime/lib/security/: cacerts
src-tauri/resources/tooling/macos/runtime/lib/server/: libjsig.dylib
src-tauri/src/: device.rs  lib.rs  main.rs  repair.rs  scanner.rs
test/: blue-v1.1-vc2.apk
