[package]
name = "apk-compat-helper"
version = "0.1.6"
description = "Local APK compatibility scanner and repair tool"
edition = "2021"

[lib]
name = "apk_compat_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
zip = { version = "4", default-features = false, features = ["deflate"] }
